# partitracker

./: .clang-format  .gitignore  CMakeLists.txt  README.md  color_model.cc  color_model.h  configs.cc  configs.h  dynamics_model.cc  dynamics_model.h  histogram_3d.cc  histogram_3d.h  main.cc  observation_model.cc  observation_model.h  particle.cc  particle.h  particle_filter.cc  particle_filter.h  state.cc  state.h  weighted_sampler.cc  weighted_sampler.h
data/: sequence1.xml  sequence2.xml  sequence3.xml
